# controllers/BoardControl.js
@@ -1,51 +1,58 @@
-const Board  = require("../entities/Board")
+const Board = require("../entities/Board");
+const Thread = require("../entities/Thread");
+const { Sequelize } = require("sequelize");
+
 const BoardControl = {
-    async getAll(req,res){
+    async getAll(req, res) {
         // #swagger.tags = ['Board']
         try {
-            res.json(await Board.findAll())
+            res.json(await Board.findAll());
         } catch (error) {
             res.status(500).json({
-                error: 'Erro ao buscar os boards - '+error.message,
-                name:error.name,
-                stack: error.stack
-            })
+                error: "Erro ao buscar os boards - " + error.message,
+                name: error.name,
+                stack: error.stack,
+            });
         }
     },
 
-    async getById(req,res){
+    async getById(req, res) {
         // #swagger.tags = ['Board']
-        const {id} = req.params;
+        const { id } = req.params;
         try {
             return res.json(await Board.findByPk(id));
         } catch (error) {
-            res.status(500).json({error: 'Erro ao procurar board - '+error.message})
+            res.status(500).json({
+                error: "Erro ao procurar board - " + error.message,
+            });
         }
     },
 
-    async save(req,res){
+    async save(req, res) {
         // #swagger.tags = ['Board']
         // #swagger.security = [{ "Bearer": [] }]
-        const {mensagem,nome,id} = req.body
+        const { mensagem, nome, id } = req.body;
 
-        const board = await Board.findByPk(id)
+        const board = await Board.findByPk(id);
 
         try {
-            if(board){
+            if (board) {
                 return res.status(400).json({
-                    error:'board já existe'
-                })
+                    error: "board já existe",
+                });
             }
             const boardInstance = await Board.create({
-                mensagem,nome,id
-            })
-            res.json(boardInstance)
+                mensagem,
+                nome,
+                id,
+            });
+            res.json(boardInstance);
         } catch (error) {
             res.status(500).json({
-                error:'Erro ao salvar board - '+ error.message,
-                name:error.name,
-                stack: error.stack
-            })
+                error: "Erro ao salvar board - " + error.message,
+                name: error.name,
+                stack: error.stack,
+            });
         }
     },
 
@@ -59,7 +66,7 @@ const BoardControl = {
             const boardInstance = await Board.findByPk(id);
             if (!boardInstance) {
                 return res.status(404).json({
-                    error: 'Board não encontrado'
+                    error: "Board não encontrado",
                 });
             }
 
@@ -72,40 +79,76 @@ const BoardControl = {
                 updatedData.nome = nome;
             }
 
-            await boardInstance.update(updatedData)
+            await boardInstance.update(updatedData);
 
-            res.sendStatus(204)
-
+            res.sendStatus(204);
         } catch (error) {
             res.status(500).json({
-                error: 'Erro ao atualizar Board - ' + error.message,
+                error: "Erro ao atualizar Board - " + error.message,
                 name: error.name,
-                stack: error.stack
+                stack: error.stack,
             });
         }
     },
-    
-    async delete(req,res){
+
+    async delete(req, res) {
         // #swagger.tags = ['Board']
         // #swagger.security = [{ "Bearer": [] }]
-        const {id}= req.body;
+        const { id } = req.body;
 
         const board = await Board.findByPk(id);
         try {
-            
-            if(!board){
+            if (!board) {
                 return req.status(404).json({
-                    error:'Não existe a board'
-                })
+                    error: "Não existe a board",
+                });
             }
             await board.destroy();
-            res.status(201).json({message :'board deletado'});
+            res.status(201).json({ message: "board deletado" });
         } catch (error) {
-            res.status(500).json({error:'erro ao deletar - '+error.message,
-            name:error.name,
-            stack: error.stack})
+            res.status(500).json({
+                error: "erro ao deletar - " + error.message,
+                name: error.name,
+                stack: error.stack,
+            });
         }
-    }
-}
+    },
+
+    async getPopularBoards(_, res) {
+        /*  #swagger.tags = ['Board']
+            #swagger.description = 'Retorna uma lista dos 10 boards mais populares, baseados no número de threads e respostas associadas a eles.'
+            #swagger.responses[200] = {
+                description: 'Lista dos boards mais populares.'
+            }
+            #swagger.responses[500] = {
+                description: 'Erro ao buscar boards mais populares.'
+            }
+        */
+        try {
+            const popularBoards = await Board.findAll({
+                attributes: {
+                    include: [
+                        [
+                            Sequelize.literal(
+                                "(SELECT COUNT(*) FROM threads WHERE threads.boardId = board.id)"
+                            ),
+                            "threadCount",
+                        ],
+                    ],
+                },
+                order: [[Sequelize.literal("threadCount"), "DESC"]],
+                limit: 10,
+            });
+
+            res.status(200).json(popularBoards);
+        } catch (error) {
+            console.error("Erro ao buscar boards mais populares:", error);
+            res.status(500).json({
+                message: "Erro ao buscar boards mais populares",
+                error: error.message,
+            });
+        }
+    },
+};
 
 module.exports = BoardControl;
