# controllers/ThreadControl.js
@@ -10,10 +10,12 @@ const ThreadControl = {
         const pageNumber = Math.max(1, Number(page) || 1);
         const sizeNumber = 20;
         try {
-            res.json(await Thread.findAll({
-                limit: sizeNumber,
-                offset: (pageNumber - 1) * sizeNumber,
-            }));
+            res.json(
+                await Thread.findAll({
+                    limit: sizeNumber,
+                    offset: (pageNumber - 1) * sizeNumber,
+                })
+            );
         } catch (error) {
             res.status(500).json({
                 error: "Erro ao buscar os Threads - " + error.message,
@@ -32,15 +34,15 @@ const ThreadControl = {
                     [Op.or]: [
                         {
                             titulo: {
-                                [Op.like]: `%${filters}%`
-                            }
+                                [Op.like]: `%${filters}%`,
+                            },
                         },
                         {
                             mensagem: {
-                                [Op.like]: `%${filters}%`
-                            }
-                        }
-                    ]
+                                [Op.like]: `%${filters}%`,
+                            },
+                        },
+                    ],
                 },
             });
             res.json(threads);
@@ -56,7 +58,8 @@ const ThreadControl = {
     async getById(req, res) {
         // #swagger.tags = ['Thread']
         const { id } = req.params;
-        const ip = req.headers["x-forwarded-for"] || req.connection.remoteAddress;
+        const ip =
+            req.headers["x-forwarded-for"] || req.connection.remoteAddress;
         try {
             const thread = await Thread.findByPk(id);
             if (!thread) {
@@ -86,7 +89,9 @@ const ThreadControl = {
                 return res.json(thread);
             }
         } catch (error) {
-            res.status(500).json({ error: "Erro ao procurar Thread - " + error.message });
+            res.status(500).json({
+                error: "Erro ao procurar Thread - " + error.message,
+            });
         }
     },
 
@@ -117,7 +122,8 @@ const ThreadControl = {
         const user = req.user;
         const { titulo, mensagem } = req.body;
         const arquivo = req.file ? req.file.firebaseUrl : null;
-        const ip = req.headers["x-forwarded-for"] || req.connection.remoteAddress;
+        const ip =
+            req.headers["x-forwarded-for"] || req.connection.remoteAddress;
         try {
             const boardId = await Board.findByPk(board);
             if (!boardId) {
@@ -150,11 +156,13 @@ const ThreadControl = {
         try {
             return await Thread.findOne({
                 where: {
-                    titulo: title
-                }
+                    titulo: title,
+                },
             });
         } catch (error) {
-            throw new Error('Erro ao buscar thread pelo titulo ' + error.message);
+            throw new Error(
+                "Erro ao buscar thread pelo titulo " + error.message
+            );
         }
     },
 
@@ -185,7 +193,8 @@ const ThreadControl = {
         const { id } = req.params;
         const { titulo, mensagem } = req.body;
         const arquivo = req.file ? req.file.firebaseUrl : null;
-        const ip = req.headers["x-forwarded-for"] || req.connection.remoteAddress;
+        const ip =
+            req.headers["x-forwarded-for"] || req.connection.remoteAddress;
         const userLogged = req.user;
 
         try {
@@ -204,7 +213,9 @@ const ThreadControl = {
                 if (!titleExist) {
                     updatedData.titulo = titulo;
                 } else {
-                    return res.status(400).json({ msg: "Titulo da thread já existe!" });
+                    return res
+                        .status(400)
+                        .json({ msg: "Titulo da thread já existe!" });
                 }
             }
 
@@ -220,8 +231,8 @@ const ThreadControl = {
 
             await ThreadInstance.update(updatedData, {
                 where: {
-                    id
-                }
+                    id,
+                },
             });
 
             res.sendStatus(204);
@@ -250,6 +261,73 @@ const ThreadControl = {
                 error: "Erro ao deletar - " + error.message,
                 name: error.name,
                 stack: error.stack,
+            });
+        }
+    },
+
+    async getThreadsByBoard(req, res) {
+        /*  #swagger.tags = ['Thread']
+            #swagger.description = 'Retorna todas as threads de um board específico (Utilizando o ID da board).'
+            #swagger.parameters['boardId'] = {
+                in: 'path',
+                description: 'ID do board',
+                required: true,
+                type: 'integer'
+            }
+            #swagger.responses[200] = {
+                description: 'Lista das threads do board.'
+            }
+            #swagger.responses[500] = {
+                description: 'Erro ao buscar threads do board.'
+            }
+        */
+        const boardId = req.params.boardId;
+        try {
+            const threads = await Thread.findAll({
+                where: { boardId: boardId },
+            });
+            res.status(200).json(threads);
+        } catch (error) {
+            res.status(500).json({
+                message: "Erro ao buscar threads do board",
+                error,
+            });
+        }
+    },
+
+    async getRecentThreads(_, res) {
+        /*  #swagger.tags = ['Thread']
+            #swagger.description = 'Retorna uma lista das 10 threads mais recentes, ordenadas pela data de criação em ordem decrescente.'
+            #swagger.responses[200] = {
+                description: 'Lista das threads mais recentes.'
+            }
+            #swagger.responses[404] = {
+                description: 'Nenhuma thread encontrada!'
+            }
+            #swagger.responses[500] = {
+                description: 'Erro ao buscar threads mais recentes.'
+            }
+        */
+        try {
+            console.log('Buscando threads mais recentes...');
+            const recentThreads = await Thread.findAll({
+                order: [["createdAt", "DESC"]],
+                limit: 10,
+            });
+
+            console.log('Número de threads encontradas:', recentThreads.length);
+
+            if (recentThreads.length === 0) {
+                return res
+                    .status(404)
+                    .json({ msg: "Nenhuma thread encontrada!" });
+            }
+
+            res.status(200).json(recentThreads);
+        } catch (error) {
+            res.status(500).json({
+                message: "Erro ao buscar threads mais recentes",
+                error,
             });
         }
     },
